Minor updates to ESN markdown

--- a/esn-playground.ipynb
+++ b/esn-playground.ipynb
@@ -348,7 +348,7 @@
     "\n",
     "The reservoir typically consists of recurrently connected units, where the connections are usually set at random and the units themselves typically are nonlinear. The readout mechanism is usually a linear transformation of the reservoir output, typically adapted to the task of interest using linear regression or ridge regression using a teaching signal.\n",
     "\n",
-    "In recent years, many variants on ESNs and other architectures have been developed, including TreeESN for tree-structured data; DeepESN, which utilizes consecutively stacked reservoirs; and Liquid-State Networks.\n",
+    "In recent years, many variants on ESNs and other architectures have been developed, including TreeESN for tree-structured data; DeepESN, which utilizes consecutively stacked reservoirs; and Liquid-State Networks. TreeESN, DeepESN, and Deep TreeESN had all shown promise in (re)producing and discriminating structured time series data.\n",
     "\n",
     "Some papers on DeepESN:\n",
     "\n",
@@ -393,7 +393,7 @@
    "source": [
     "batch_size = 32\n",
     "input_size = 1\n",
-    "hidden_size = 1000\n",
+    "hidden_size = 500\n",
     "output_size = 1\n",
     "washout_rate = 0.2  # Value between 0 and 1, controls how leaky connections are between reservoirs"
    ]
@@ -559,7 +559,7 @@
     "    train_loader = torch.utils.data.DataLoader(train, batch_size=batch_size, shuffle=True, num_workers=2)\n",
     "    test_loader = torch.utils.data.DataLoader(test, batch_size=batch_size, shuffle=False,num_workers=2)\n",
     "    \n",
-    "    model = ESN(input_size, hidden_size, output_size, output_steps='mean', readout_training='cholesky')\n",
+    "    model = ESN(input_size, hidden_size, output_size, num_layers=1, output_steps='mean', readout_training='cholesky')\n",
     "    \n",
     "    # Training\n",
     "    tot_correct = 0\n",
